--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,20 @@
-Package: RegioMSI
-Date: 2024-07-02
+Package: Stevens.scRNASeq
+Date: 2024-07-08
 Type: Package
-Title: Parallel Processing, Normalization, and Analysis of Mass Spectrometry Imaging Datasets
+Title: Streamlined Processing and Analysis of Single-cell RNA-Sequencing Datasets
 Version: 1.1
 Author: Nathanial C. Stevens
 Maintainer: Nathanial C. Stevens <cschasestevens@gmail.com>
-Description: Extends applications of mass spectrometry imaging datasets by enabling region-specific statistical analysis of biological replicates, introducing improved image normalization methods to reduce intra- and intersample technical artifacts, and offering additional spatial segmentation strategies for unsupervised regional classification.    RegioMSI integrates the strengths of the Cardinal v3 package with a comprehensive framework for parallel data processing, normalization, and analysis of mass spectrometry imaging datasets containing multiple biological replicate samples. The package introduces the sparse LOESS normalization method for mass spectrometry imaging data, which addresses intrasample signal intensity drift and batch effects resulting from data acquisition. Spatial segmentation is performed by adapting the KNN algorithm used by the Seurat package to mass spectrometry imaging data.    Methods for statistical analysis are provided for comparing identified image regions both within individual samples and across treatment groups. Enrichment analysis based on compound class similarity is also supported but currently relies upon user-supplied class information. Tools for plotting ion images and statistical results based on ggplot2 enable seamless, detailed visualization of either single imaging runs or entire mass spectrometry imaging experiments.    RegioMSI is compatible with Windows, Linux, or WSL2. However, analyses conducted in Windows default to sequential processing due to inherent stability issues of parallel processing in Windows.
+Description: Utilizes Seurat in tandem with various R packages to perform processing and analysis of single-cell RNA-Sequencing (scRNA-Seq) datasets.    The methods included in this package provide a seamless workflow for commonly used Seurat functions, statistical methods, and visualization of scRNA-Seq data.    Most analyses can be run in parallel using intuitive functions to expedite time-consuming steps such as dataset integration and differential expression analysis.    The package is compatible with Windows, Linux, or WSL2. However, analyses conducted in Windows default to sequential processing due to inherent stability issues of parallel processing in Windows.
 License: GNU GPL v.3.0
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Imports: 
   ggplot2,
   dplyr,
   ggsci,
   viridis,
-  Cardinal (>= 3.6.2),
   BiocGenerics,
   BiocParallel,
   fuzzyjoin,
