--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,9 @@ Imports:
   ggplot2,
   dplyr,
   ggsci,
+  SoupX,
+  scDblFinder,
+  SingleCellExperiment,
   viridis,
   BiocGenerics,
   BiocParallel,
