--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(Create.proc.params)
 export(col.grad)
 export(col.univ)
+export(sc.process.batch)
 export(sc.process.file)
 export(sc.theme1)
