--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Create.proc.params)
 export(col.grad)
 export(col.univ)
 export(sc.integrate.data)
+export(sc.plot.rho)
 export(sc.process.batch)
 export(sc.process.file)
 export(sc.theme1)
