--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,11 @@ export(Create.proc.params)
 export(col.grad)
 export(col.univ)
 export(sc.integrate.data)
+export(sc.integration.qc)
+export(sc.pca)
+export(sc.pca.plot)
 export(sc.plot.rho)
 export(sc.process.batch)
 export(sc.process.file)
 export(sc.theme1)
+export(sc.umap.panel)
