--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,5 @@ export(sc.process.batch)
 export(sc.process.file)
 export(sc.theme1)
 export(sc.umap.panel)
+export(sc.umap.panel.gene)
+export(sc.umap.panel.gene.list)
