--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(Create.proc.params)
 export(col.grad)
 export(col.univ)
+export(fun.sc.umap.plot)
 export(sc.integrate.data)
 export(sc.integration.qc)
 export(sc.pca)
 export(sc.pca.plot)
 export(sc.plot.rho)
+export(sc.predict.clusters)
 export(sc.process.batch)
 export(sc.process.file)
 export(sc.theme1)
