--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(Create.proc.params)
 export(col.grad)
 export(col.univ)
-export(fun.sc.umap.plot)
+export(fun.marker.gene.recluster)
 export(sc.integrate.data)
 export(sc.integration.qc)
 export(sc.pca)
@@ -13,6 +13,9 @@ export(sc.predict.clusters)
 export(sc.process.batch)
 export(sc.process.file)
 export(sc.theme1)
+export(sc.top10.marker.heatmap)
+export(sc.top10.marker.heatmap.rc)
 export(sc.umap.panel)
 export(sc.umap.panel.gene)
 export(sc.umap.panel.gene.list)
+export(sc.umap.standard)
