--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(Create.proc.params)
 export(col.grad)
 export(col.univ)
-export(fun.marker.gene.recluster)
 export(sc.integrate.data)
 export(sc.integration.qc)
 export(sc.pca)
@@ -12,6 +11,7 @@ export(sc.plot.rho)
 export(sc.predict.clusters)
 export(sc.process.batch)
 export(sc.process.file)
+export(sc.recluster.data)
 export(sc.theme1)
 export(sc.top10.marker.heatmap)
 export(sc.top10.marker.heatmap.rc)
