--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Create.proc.params)
 export(col.grad)
 export(col.univ)
+export(sc.DGEA)
 export(sc.integrate.data)
 export(sc.integration.qc)
 export(sc.pca)
@@ -13,6 +14,8 @@ export(sc.process.batch)
 export(sc.process.file)
 export(sc.recluster.data)
 export(sc.theme1)
+export(sc.top10.deg.dotplot)
+export(sc.top10.deg.heatmap)
 export(sc.top10.marker.heatmap)
 export(sc.top10.marker.heatmap.rc)
 export(sc.umap.panel)
