--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,9 @@ License: GNU GPL v.3.0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+VignetteBuilder: knitr
+Suggests: knitr,
+  rmarkdown
 Imports: 
   ggplot2,
   dplyr,
