Added functions for enrichment analysis

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: Stevens.scRNASeq
 Date: 2024-07-08
 Type: Package
 Title: Streamlined Processing and Analysis of Single-cell RNA-Sequencing Datasets
-Version: 1.1
+Version: 1.2
 Author: Nathanial C. Stevens
 Maintainer: Nathanial C. Stevens <cschasestevens@gmail.com>
 Description: Utilizes Seurat in tandem with various R packages to perform processing and analysis of single-cell RNA-Sequencing (scRNA-Seq) datasets.    The methods included in this package provide a seamless workflow for commonly used Seurat functions, statistical methods, and visualization of scRNA-Seq data.    Most analyses can be run in parallel using intuitive functions to expedite time-consuming steps such as dataset integration and differential expression analysis.    The package is compatible with Windows, Linux, or WSL2. However, analyses conducted in Windows default to sequential processing due to inherent stability issues of parallel processing in Windows.
@@ -37,4 +37,8 @@ Imports:
   ComplexHeatmap,
   magrittr,
   EnhancedVolcano,
-  lazyeval
+  lazyeval,
+  biomaRt,
+  topGO,
+  org.Hs.eg.db,
+  shadowtext
