--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(Create.proc.params)
 export(col.grad)
 export(col.univ)
 export(sc.DGEA)
+export(sc.enrichment)
 export(sc.integrate.data)
 export(sc.integration.qc)
 export(sc.pca)
 export(sc.pca.plot)
+export(sc.plot.enrichment)
 export(sc.plot.rho)
 export(sc.predict.clusters)
 export(sc.process.batch)
