Added function for updating package libraries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Create.proc.params)
 export(col.grad)
 export(col.univ)
 export(sc.DGEA)
+export(sc.check.lib)
 export(sc.enrichment)
 export(sc.integrate.data)
 export(sc.integration.qc)
