Added compatibility for multimodal data sets

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: Stevens.scRNASeq
-Date: 2024-07-08
+Date: 2024-08-23
 Type: Package
-Title: Streamlined Processing and Analysis of Single-cell RNA-Sequencing Datasets
-Version: 1.2
+Title: Streamlined Processing and Analysis of Single-cell RNA-Sequencing and Single-cell ATAC-Sequencing Datasets
+Version: 1.3
 Author: Nathanial C. Stevens
 Maintainer: Nathanial C. Stevens <cschasestevens@gmail.com>
-Description: Utilizes Seurat in tandem with various R packages to perform processing and analysis of single-cell RNA-Sequencing (scRNA-Seq) datasets.    The methods included in this package provide a seamless workflow for commonly used Seurat functions, statistical methods, and visualization of scRNA-Seq data.    Most analyses can be run in parallel using intuitive functions to expedite time-consuming steps such as dataset integration and differential expression analysis.    The package is compatible with Windows, Linux, or WSL2. However, analyses conducted in Windows default to sequential processing due to inherent stability issues of parallel processing in Windows.
+Description: Utilizes Seurat and Signac in tandem with various R packages to perform processing and analysis of single-cell RNA-Sequencing (scRNA-Seq) and single-cell ATAC-Sequencing (scATAC-Seq) datasets.    The methods included in this package provide a seamless workflow for commonly used Seurat and Signac functions, statistical methods, and visualization.    Most analyses can be run in parallel using intuitive functions to expedite time-consuming steps such as dataset integration and differential expression analysis.    The package is compatible with Windows, Linux, or WSL2. However, analyses conducted in Windows default to sequential processing due to inherent stability issues of parallel processing in Windows.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -15,6 +15,7 @@ Suggests:
   knitr,
   rmarkdown
 Imports: 
+  Signac,
   ggplot2,
   dplyr,
   ggsci,
