--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(Create.proc.params)
 export(col.grad)
 export(col.univ)
-export(sc.DGEA)
 export(sc.check.lib)
+export(sc.diff)
 export(sc.enrichment)
 export(sc.integrate.data)
 export(sc.integration.qc)
@@ -17,8 +17,8 @@ export(sc.process.batch)
 export(sc.process.file)
 export(sc.recluster.data)
 export(sc.theme1)
+export(sc.top10.de.da.heatmap)
 export(sc.top10.deg.dotplot)
-export(sc.top10.deg.heatmap)
 export(sc.top10.marker.heatmap)
 export(sc.top10.marker.heatmap.rc)
 export(sc.umap.panel)
