Added compatibility for multimodal data sets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(Create.proc.params)
 export(col.grad)
 export(col.univ)
 export(sc.check.lib)
-export(sc.diff)
 export(sc.enrichment)
 export(sc.integrate.data)
 export(sc.integration.qc)
@@ -26,3 +25,4 @@ export(sc.umap.panel.gene)
 export(sc.umap.panel.gene.list)
 export(sc.umap.standard)
 export(sc.volcano)
+export(sc_diff)
