--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,11 +18,14 @@ export(sc.umap.panel)
 export(sc.umap.panel.gene)
 export(sc.umap.panel.gene.list)
 export(sc.umap.standard)
-export(sc.volcano)
+export(sc_atac_motifs)
 export(sc_check_lib)
+export(sc_coverage_plot)
 export(sc_diff)
 export(sc_plot_rho)
 export(sc_process_batch)
 export(sc_process_file)
 export(sc_theme1)
 export(sc_top10_marker_heatmap)
+export(sc_top_motif_heatmap)
+export(sc_volcano)
