Additional formatting fixes for multiome data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,6 @@ export(create_proc_params)
 export(sc.enrichment)
 export(sc.integrate.data)
 export(sc.integration.qc)
-export(sc.pca)
-export(sc.pca.plot)
 export(sc.plot.enrichment)
 export(sc.predict.clusters)
 export(sc.recluster.data)
@@ -22,6 +20,8 @@ export(sc_atac_motifs)
 export(sc_check_lib)
 export(sc_coverage_plot)
 export(sc_diff)
+export(sc_pca)
+export(sc_pca_plot)
 export(sc_plot_rho)
 export(sc_process_batch)
 export(sc_process_file)
