Reformatting of UMAP functions for multiome compatibility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,6 @@ export(sc.recluster.data)
 export(sc.top10.de.da.heatmap)
 export(sc.top10.deg.dotplot)
 export(sc.top10.marker.heatmap.rc)
-export(sc.umap.panel)
-export(sc.umap.panel.gene)
-export(sc.umap.panel.gene.list)
-export(sc.umap.standard)
 export(sc_atac_motifs)
 export(sc_check_lib)
 export(sc_coverage_plot)
@@ -28,4 +24,9 @@ export(sc_process_file)
 export(sc_theme1)
 export(sc_top10_marker_heatmap)
 export(sc_top_motif_heatmap)
+export(sc_umap_panel)
+export(sc_umap_panel_act)
+export(sc_umap_panel_gene)
+export(sc_umap_panel_gene_list)
+export(sc_umap_standard)
 export(sc_volcano)
