--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,25 +4,28 @@ export(col_grad)
 export(col_univ)
 export(create_proc_params)
 export(sc.enrichment)
-export(sc.integrate.data)
-export(sc.integration.qc)
 export(sc.plot.enrichment)
 export(sc.predict.clusters)
 export(sc.recluster.data)
 export(sc.top10.de.da.heatmap)
 export(sc.top10.deg.dotplot)
-export(sc.top10.marker.heatmap.rc)
 export(sc_atac_motifs)
 export(sc_check_lib)
 export(sc_coverage_plot)
 export(sc_diff)
+export(sc_integrate_data)
+export(sc_integration_qc)
+export(sc_multiome_params)
+export(sc_multiome_process)
 export(sc_pca)
 export(sc_pca_plot)
 export(sc_plot_rho)
 export(sc_process_batch)
+export(sc_process_batch_multiome)
 export(sc_process_file)
 export(sc_theme1)
 export(sc_top10_marker_heatmap)
+export(sc_top10_marker_heatmap_rc)
 export(sc_top_motif_heatmap)
 export(sc_umap_panel)
 export(sc_umap_panel_act)
