Added and ammended functions for reclustering, heatmaps, and UMAPs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(col_grad)
 export(col_univ)
 export(create_proc_params)
 export(sc.predict.clusters)
-export(sc.recluster.data)
 export(sc_atac_motifs)
 export(sc_check_lib)
 export(sc_coverage_plot)
@@ -21,6 +20,7 @@ export(sc_plot_rho)
 export(sc_process_batch)
 export(sc_process_batch_multiome)
 export(sc_process_file)
+export(sc_recluster)
 export(sc_seqanno_plot)
 export(sc_theme1)
 export(sc_top10_de_da_heatmap)
