--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,13 @@ export(col_univ)
 export(create_proc_params)
 export(sc.predict.clusters)
 export(sc_atac_motifs)
+export(sc_cc_chrd)
+export(sc_cc_dotp)
+export(sc_cc_hmap)
+export(sc_cc_run)
 export(sc_check_lib)
 export(sc_coverage_plot)
+export(sc_coverage_plot2)
 export(sc_diff)
 export(sc_enrichment)
 export(sc_integrate_data)
