--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,4 +39,5 @@ export(sc_umap_panel_gene)
 export(sc_umap_panel_gene_list)
 export(sc_umap_standard)
 export(sc_vio_panel_gene)
+export(sc_visualize)
 export(sc_volcano)
