--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(col_grad)
 export(col_univ)
 export(create_proc_params)
-export(sc.predict.clusters)
 export(sc_atac_motifs)
 export(sc_cc_chrd)
 export(sc_cc_dotp)
@@ -22,10 +21,13 @@ export(sc_pca)
 export(sc_pca_plot)
 export(sc_plot_enrichment)
 export(sc_plot_rho)
+export(sc_predict)
+export(sc_predict2)
 export(sc_process_batch)
 export(sc_process_batch_multiome)
 export(sc_process_file)
 export(sc_recluster)
+export(sc_save_pred)
 export(sc_seqanno_plot)
 export(sc_theme1)
 export(sc_top10_de_da_heatmap)
