--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(sc_check_lib)
 export(sc_coverage_plot)
 export(sc_coverage_plot2)
 export(sc_diff)
+export(sc_dotplot)
 export(sc_enrichment)
 export(sc_integrate_data)
 export(sc_integration_qc)
@@ -31,7 +32,6 @@ export(sc_save_pred)
 export(sc_seqanno_plot)
 export(sc_theme1)
 export(sc_top10_de_da_heatmap)
-export(sc_top10_deg_dotplot)
 export(sc_top10_marker_heatmap)
 export(sc_top10_marker_heatmap_rc)
 export(sc_top_motif_heatmap)
