--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(col_grad)
 export(col_univ)
 export(create_proc_params)
+export(pc_qc)
+export(pc_qc_box)
+export(pc_qc_scatter)
+export(pc_theme_img)
 export(sc_atac_motifs)
 export(sc_cc_chrd)
 export(sc_cc_dotp)
