--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 export(col_grad)
 export(col_univ)
 export(create_proc_params)
+export(pc_create_ad)
 export(pc_create_seurat)
+export(pc_norm)
 export(pc_qc)
 export(pc_qc_box)
+export(pc_qc_ch)
 export(pc_qc_scatter)
+export(pc_qc_sum)
 export(pc_scatter)
 export(pc_theme_img)
 export(sc_atac_motifs)
