--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,6 @@ export(pc_scatter)
 export(pc_theme_img)
 export(sc_atac_motifs)
 export(sc_cc_chrd)
-export(sc_cc_dotp)
-export(sc_cc_hmap)
 export(sc_cc_run)
 export(sc_check_lib)
 export(sc_coverage_plot)
@@ -53,3 +51,15 @@ export(sc_umap_standard)
 export(sc_vio_panel_gene)
 export(sc_visualize)
 export(sc_volcano)
+import(SeuratObject)
+import(dplyr)
+import(ggplot2)
+import(ggsci)
+importFrom(BiocManager,install)
+importFrom(GenomeInfoDb,keepStandardChromosomes)
+importFrom(GenomeInfoDb,seqlevelsStyle)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(Rsamtools,FaFile)
+importFrom(parallel,mclapply)
+importFrom(rtracklayer,import)
+importFrom(viridis,viridis)
